# prim

./: .editorconfig  .git-std.toml  .gitignore  .markdownlintignore  .pre-commit-hooks.yaml  .primignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  bootstrap  dprint.json  install.sh  justfile  project.toml
.githooks/: commit-msg  commit-msg.hooks  pre-commit  pre-commit.hooks  pre-push  pre-push.hooks
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/prim-cli/: Cargo.toml  README.md  build.rs
crates/prim-cli/src/: app.rs  argv.rs  changed_files.rs  cli.rs  diff.rs  discover.rs  editorconfig.rs  explain.rs  init.rs  lsp.rs  main.rs  provenance.rs  report.rs  ui.rs  write.rs
crates/prim-cli/src/app/: load.rs
crates/prim-cli/src/lsp/: diagnostics.rs  protocol.rs  server.rs  transport.rs
crates/prim-cli/tests/: changed_files.rs  diff.rs  discovery.rs  editorconfig.rs  explain.rs  hooks.rs  hygiene.rs  idempotence.rs  init.rs  json.rs  lint_diagnostics.rs  lsp.rs  machine_readable.rs  markdown.rs  modes.rs  safety.rs  toml.rs  verbs.rs  yaml.rs
crates/prim-cli/tests/fixtures/: sarif-schema-2.1.0.json
crates/prim-fmt/: Cargo.toml  README.md
crates/prim-fmt/benches/: format.rs
crates/prim-fmt/src/: classify.rs  diagnostics.rs  error.rs  hygiene.rs  json.rs  lib.rs  markdown.rs  mdlint.rs  position.rs  style.rs  toml.rs  yaml.rs
crates/prim-fmt/tests/: correctness.rs
crates/prim-fmt/tests/correctness/: spec_parser.rs
crates/prim-fmt/tests/correctness/fixtures/hygiene/: crlf_mixed_with_trailing_ws.txt  multiple_trailing_blank_lines.txt  no_final_newline.txt  trailing_whitespace_and_blank_lines.txt
crates/prim-fmt/tests/correctness/fixtures/json/: basic_object.txt  empty_array.txt  empty_variants.txt  long_string_values.txt  nested_unicode.txt  numbers.txt
crates/prim-fmt/tests/correctness/fixtures/jsonc/: block_comment.txt  trailing_comma_comment.txt
crates/prim-fmt/tests/correctness/fixtures/markdown/: code_fence_with_language.txt  front_matter.txt  hard_break.txt  heading_and_long_prose.txt  links_and_blockquote.txt  nested_lists.txt  nested_markdown_fence.txt  table.txt
crates/prim-fmt/tests/correctness/fixtures/toml/: array_of_tables.txt  dotted_keys_and_datetime.txt  mixed_syntax.txt  multiline_strings.txt
crates/prim-fmt/tests/correctness/fixtures/yaml/: anchors_and_block_scalar.txt  flow_collections.txt  folded_scalar.txt  merge_key.txt  quoted_special_keys.txt
docs/: README.md  SPEC.md  SUMMARY.md  USAGE.md  getting-started.md  installation.md  recipes.md
docs/decisions/: 0001-pure-engine-crate-boundary.md  0002-editorconfig-resolution-semantics.md  0003-json-via-dprint-plugin-json.md  0004-toml-via-taplo.md  0005-yaml-via-pretty-yaml.md  0006-markdown-via-dprint-and-dprint-retirement.md  0007-cli-verb-migration.md  0008-diagnostic-line-col-mapping.md
docs/design/: system.md  v2-editorconfig-prim-keys.md  v2-recon.md  v2-rumdl-integration.md
spec/: Cargo.toml
spec/install/: install_test.sh
spec/src/: lib.rs
spec/tests/: general.rs
spec/tests/cmd/general/: explain_help.toml  fix_help.toml  fmt_help.toml  help.toml  init_help.toml  lint_help.toml  lint_rejects_check.toml  lsp_help.toml  nonexistent_path.toml  unknown_flag.toml  version.toml
