[workspace]
members = ["crates/prim-fmt", "crates/prim-cli", "spec"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/driftsys/prim"

[workspace.dependencies]
prim-fmt = { version = "0.1.0", path = "crates/prim-fmt" }

[profile.release]
lto = true
strip = true
codegen-units = 1
