[workspace]
members = ["crates/prim-fmt", "crates/prim-cli", "spec"]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/driftsys/prim"

[workspace.dependencies]
prim-fmt = { version = "0.2.1", path = "crates/prim-fmt" }

[profile.release]
lto = true
strip = true
codegen-units = 1

# dprint-core ships a debug-only assertion (printer.rs) that panics on valid
# Markdown containing an inline code span with an embedded newline. Release
# builds (and the dprint wasm plugins) compile it out; disable it here so prim's
# dev/test builds are equally robust. See AD-0006.
[profile.dev.package.dprint-core]
debug-assertions = false
