[package]
name = "prim-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "The prim formatting engine — Markdown/JSON/JSONC/YAML/TOML plus whitespace hygiene (library)."
documentation = "https://docs.rs/prim-fmt"
homepage = "https://github.com/driftsys/prim"
keywords = ["formatter", "markdown", "json", "yaml", "toml"]
categories = ["development-tools", "text-processing"]

[lib]
name = "prim_fmt"

[dependencies]
dprint-plugin-json = "0.22"
dprint-plugin-markdown = "0.22"
pretty_yaml = "0.6"
taplo = "0.14"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
jsonc-parser = { version = "0.32", features = ["serde"] }
serde_json = "1"
toml = "1"
yaml-rust2 = "0.11"

[[bench]]
name = "format"
harness = false
